[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ats"
version = "1.0.0"
description = "Syncs text to audio"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}

# Optional metadata
authors = [{name = "ym1234"}, {name = "KanjiEater", email = "kanjieat3r@gmail.com"}]
keywords = ["whisper", "subtitles", "align", "generate"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    "beautifulsoup4 ~= 4.13.3",
    "biopython ~= 1.85",
    "EbookLib ~= 0.18",
    "faster_whisper ~= 1.1.1",
    "ffmpeg_python ~= 0.2.0",
    "rapidfuzz ~= 3.12.1",
    "numpy ~= 1.26.4",
    "openai_whisper == 20240930",
    "regex ~= 2024.11.6",
    "tqdm ~= 4.67.1",
    "wcwidth >= 0.2.13"
]

[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)
include = ["*"]  # package names should match these glob patterns (["*"] by default)
exclude = []  # exclude packages matching these glob patterns (empty by default)

